# jerrynavsegda

./: README.md  build.sh  configure.ac  hello.js  hello2.c
js/: main.js  module.js
src/: Makefile.am  build.sh  cli.c  cli.js  hello.c  hello.js  hello2.c  jsonpointer.js  list.sh  module.js  my-custom-module.c  one.json  onedata.sh  test.js  three.json  two.json
